--- a/alembic.ini
+++ b/alembic.ini
@@ -62,8 +62,8 @@ version_path_separator = os
 # the output encoding used when revision files
 # are written from script.py.mako
 # output_encoding = utf-8
+ sqlalchemy.url = sqlite:///music_player.db
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
 
 
 [post_write_hooks]
